  was added.



3.0.5 (released 2018-??-??)
---------------------------

All (GUI):

- Improve stock items consistency and aesthetics (dhowland).
- Implement wxTextCtrl::HitTest() for single line controls.

wxMSW:

- Fix handling of AUX2 mouse button events (Trylz).
- Honour alignment flags for multiline buttons using custom colours too.

wxGTK:

- Fix position of popup menus shown in wxListCtrl.


3.0.4: (released 2018-03-08)
----------------------------

All (non-GUI):

- Don't crash on trailing '%' in wxDateTime::Format().
- Fix various problems when parsing invalid ZIP files.
- Fix generic wxTimePickerCtrl to accept max values from keyboard.
- Multiple surrogate-related fixes in UTF-16 support.
- Fix reading wide character data in wxFile::ReadAll().
- Make parsing WAV data more robust.
- Fix copy ctor in numeric validators classes.

All (GUI):

- Fix wxListbook::GetPageImage() to not always return -1 (Kinaou Hervé).
- Don't reset scroll position to zero when window size changes.
- Prevent use of deleted wxDocMDIChildFrame in wxView dtor.
- Avoid delayed destruction if TLW was never created.
- Fix possible crash when destroying wxTextCtrl using hints.
- Fix display of non-breaking spaces in wxHTML non-Unicode build.
- Fix memory leak of wxClientData when wxChoice is deleted.
- Draw a point instead of a line in wxGCDC::DrawPoint().
- Set wxPG cell background colour as wxPGComboBox background colour.
- Fix ribbon page issues.
- Avoid permanently setting text hint color when using generic text entry hints.
- Avoid overriding text control color in generic wxSearchCtrl.
- Fix auto-sizing multiline wxGrid column labels with empty lines.
- Fix displaying labels of wxRadioBox items.
- Update selection in wxAuiNotebook correctly after tab move.

wxGTK:

- Allow using more recent WebKit2GTK+ in wxWebView (Scott Talbert).
- Fix displaying wxRadioBox items labels containing ampersands.
- Fix creating cursor from XBM data with GTK3.